# stampede

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/spd/: All.h  Executor.h  Graph.h  Trait.h
include/spd/async/: Pool.h
include/spd/gc/: BFSLastRecentlyUsedGCPlan.h  GCPlan.h
include/spd/util/: Compose.h  FuncHelper.h  Traversal.h
src/: BFSLastRecentlyUsedGCPlan.h  Compose.h  Example.h  Executor.h  FuncHelper.h  GCPlan.h  Graph.cpp  Graph.h  Test.h  Trait.h  Traversal.h  main.cpp  static_tests.cpp
src/async/: Pool.cpp  Pool.h
src/cv_samples/: Ops.h  Optimized.h  Stampede.h  Vanilla.h  cv_samples.cpp
